[package]
name = "gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12.3"
raw-window-handle = "0.5.2"
bytemuck = "1.14.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef", "ntdef", "windef", "wingdi", "winnt", "winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.20.1", features = ["xlib", "glx"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
slotmap = "1.0.6"
web-sys = { version = "0.3.58", features = ["WebGl2RenderingContext"] }

[dev-dependencies]
winit = "0.28.6"